--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
         .hero button {
             padding: 15px 30px;
-            background: #ffd700;
+            background: #9a1803;
             border: none;
             border-radius: 5px;
             font-size: 1.1em;
             cursor: pointer;
-            color: #2e003e;
+            color: #ffffff;
         }
 
         .about {
@@ -119,11 +119,11 @@
         .card button {
             margin: 20px;
             padding: 10px 20px;
-            background: #ffd700;
+            background: #9a1803;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            color: #2e003e;
+            color: #ffffff;
         }
 
         footer {
@@ -142,7 +142,7 @@
         }
 
         .pricing h2 {
-            color: #ffd700;
+            color: #9a1803;
         }
 
         .pricing ul {
@@ -157,11 +157,11 @@
         .pricing button {
             margin: 20px;
             padding: 10px 20px;
-            background: #ffd700;
+            background: #9a1803;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            color: #2e003e;
+            color: #ffffff;
         }
 
         .header-image {
@@ -186,21 +186,21 @@
         .about button {
             margin: 20px;
             padding: 10px 20px;
-            background: #ffd700;
+            background: #9a1803;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            color: #2e003e;
+            color: #f8f8f8;
         }
 
         .reservation button {
             margin: 20px;
             padding: 10px 20px;
-            background: #ffd700;
+            background: #9a1803;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            color: #2e003e;
+            color: #ffffff;
         }
         .massages {
             padding: 50px 20px;
@@ -413,8 +413,8 @@
 .reservation, .pricing, .massages {
     position: relative;
     justify-content: center;
-    color: #fff;
-    background: linear-gradient(135deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
+    color: #090909;
+    
     box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1), 0 4px 30px rgba(0, 0, 0, 0.1);  /* Ombres subtiles pour l'effet 3D */
     border-radius: 10px;
 }
