--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
             cursor: pointer;
             color: #ffffff;
         }
+.hero {
+    opacity: 0;
+    transform: translateY(-50px);
+    animation: fadeIn 1.5s ease-in forwards;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
         .about {
             display: flex;
