--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
             margin: 0;
             color: #0078d4;
         }
+.hero h1 {
+    animation: slideIn 2s ease-out;
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
 
         .hero p {
             margin: 20px 0;
