--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="fr">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+<meta property="og:title" content="Erotiklux.lu">
+<meta property="og:description" content="EROTIK LUX, c’est bien plus qu’une simple agence, c’est un espace dédié à l’exploration des sens et à la recherche du bien-être. Nous offrons une expérience unique où l’élégance et la sensualité se mêlent pour vous faire vivre des instants d’exception.">
+<meta property="og:image" content="https://res.cloudinary.com/dqabv7zve/image/upload/v1734769177/Erotik_z8zjsm.png">
+<meta property="og:url" content="https://erotiklux.lu">
+<meta property="og:type" content="website">
 
+<!-- Favicon -->
+<link rel="icon" href="https://res.cloudinary.com/dqabv7zve/image/upload/v1734769177/Erotik_z8zjsm.png" type="image/png">
+<link rel="apple-touch-icon" href="https://res.cloudinary.com/dqabv7zve/image/upload/v1734769177/Erotik_z8zjsm.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erotik Luxembourg</title>
