--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ body {
         <img src="Erotik.png" alt="Logo" class="header-image">
         <nav>
             <a href="#about">À propos</a>
-            <a href="#reservation">Réservation</a>
+            <a href="mass.html">Nos filles</a>
             <a href="https://wa.me/33756869240" target="_blank">Contact</a>
         </nav>
     </header>
