--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             color: #ff0000;
         }
 body {
-    background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fad0c4);
+     background: linear-gradient(-45deg, #71c5e3, #66a6d1, #83e2ef);
     animation: gradient 5s infinite;
 }
 @keyframes gradient {
