--- a/mass.html
+++ b/mass.html
@@ -197,6 +197,17 @@ body {
             { name: "Oranne", image: "12.jpg" },
             { name: "Nafisa", image: "14.jpg" },
             { name: "Rose", image: "15.jpg" },
+             { name: "Anna", image: "17.jpg" },
+             { name: "Elsa", image: "18.jpg" },
+             { name: "Rita", image: "19.jpg" },
+             { name: "Taylor", image: "20.jpg" },
+             { name: "Marie", image: "21.jpg" },
+             { name: "Suzy", image: "22.jpg" },
+             { name: "Carole", image: "23.jpg" },
+             { name: "Annita", image: "24.jpg" },
+            { name: "Michelle", image: "25.jpg" },
+            { name: "Victoria", image: "26.jpg" },
+            { name: "Melinda", image: "27.jpg" },
         ];
 
         const gallery = document.getElementById("masseuseGallery");
