--- a/mass.html
+++ b/mass.html
@@ -166,13 +166,14 @@ body {
         }
     </style>
 </head>
-<header>
-    <img src="Erotik.png" alt="Logo" class="header-image">
-    <nav>
-        <a href="index.html#about">À propos</a>
-        <a href="mass.html">Nos filles</a>
-    </nav>
-</header>
+   <header>
+        <img src="Erotik.png" alt="Logo" class="header-image">
+        <nav>
+            <a href="#about">À propos</a>
+            <a href="mass.html">Nos filles</a>
+            <a href="https://wa.me/33756869240" target="_blank">Contact</a>
+        </nav>
+    </header>
 <body>
     <div class="container">
         <h1><br>
