--- a/mass.html
+++ b/mass.html
@@ -169,7 +169,7 @@ body {
    <header>
         <img src="Erotik.png" alt="Logo" class="header-image">
         <nav>
-            <a href="#about">À propos</a>
+            <a href="index.html">À propos</a>
             <a href="mass.html">Nos filles</a>
             <a href="https://wa.me/33756869240" target="_blank">Contact</a>
         </nav>
