--- a/mass.html
+++ b/mass.html
@@ -207,6 +207,9 @@ body {
             { name: "Michelle", image: "25.jpg" },
             { name: "Victoria", image: "26.jpg" },
             { name: "Melinda", image: "27.jpg" },
+             { name: "Viviane (trans)", image: "28.jpg" },
+             { name: "Thalia", image: "29.jpg" },
+             { name: "Keisha", image: "30.jpg" },
         ];
 
         const gallery = document.getElementById("masseuseGallery");
