--- a/mass.html
+++ b/mass.html
@@ -209,7 +209,7 @@ body {
             { name: "Melinda", image: "27.jpg" },
              { name: "Viviane (trans)", image: "28.jpg" },
              { name: "Thalia", image: "29.jpg" },
-             { name: "Keisha", image: "30.jpg" },
+             { name: "Juliette", image: "30.jpg" },
         ];
 
         const gallery = document.getElementById("masseuseGallery");
