--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ body {
     <section class="hero">
         <h1>Découvrez l'art du massage érotique</h1>
         <p>EROTIK LUX, c’est bien plus qu’une simple agence, c’est un espace dédié à l’exploration des sens et à la recherche du bien-être. Nous offrons une expérience unique où l’élégance et la sensualité se mêlent pour vous faire vivre des instants d’exception.</p>
-        <button onclick="window.open('https://wa.me/33756869240', '_blank')">Faire une réservation</button>
+        <button onclick="window.open('href="mass.html"', '_blank')">Faire une réservation</button>
     </section>
 
     <section class="about" id="about">
@@ -384,7 +384,7 @@ body {
             <h2>Une Invitation à l’Évasion</h2>
             <p>Vous êtes à la recherche de plaisirs intenses et de sensations fortes ? Laissez-vous tenter par l’excellence des services proposés par EROTIK LUX. Contactez-nous dès aujourd’hui pour découvrir un univers où le plaisir et la sensualité prennent tout leur sens.</p>
         </div>
-        <button onclick="window.open('https://wa.me/33756869240', '_blank')">Nous contacter</button>
+        <button onclick="window.open(href="mass.html", '_blank')">Nous contacter</button>
     </section>
 
     <section class="reservation" id="reservation">
@@ -394,19 +394,19 @@ body {
                 <img src="serv1.jpg" alt="Masseuse 1">
                 <h3>Massage Érotique avec Rapport Sexuel</h3>
                 <p>Le massage érotique avec rapport sexuel proposé par EROTIK LUX est une expérience sensuelle et intime, alliant relaxation et plaisir. Nos professionnelles qualifiées vous guideront à travers un moment de détente profonde avant de vous offrir une expérience plus intense, respectueuse et discrète. Chaque séance est adaptée à vos besoins pour garantir un bien-être total dans un cadre raffiné et sécurisé.</p>
-                <button onclick="window.open('https://wa.me/33756869240', '_blank')">Réserver maintenant</button>
+                <button onclick="window.open(href="mass.html", '_blank')">Réserver maintenant</button>
             </div>
             <div class="card">
                 <img src="serv2.jpg" alt="Masseuse 2">
                 <h3>Massage simple</h3>
                 <p>Le massage simple proposé par EROTIK LUX est une expérience de relaxation pure, visant à apaiser le corps et l'esprit. Nos masseuses qualifiées utilisent des techniques douces et ciblées pour soulager les tensions musculaires, améliorer la circulation et procurer une sensation de bien-être profond. Ce service est idéal pour ceux qui recherchent une détente sans compromis, dans un environnement intime et discret.</p>
-                <button onclick="window.open('https://wa.me/33756869240', '_blank')">Réserver maintenant</button>
+                <button onclick="window.open(href="mass.html", '_blank')">Réserver maintenant</button>
             </div>
             <div class="card">
                 <img src="serv3.jpg" alt="Masseuse 3">
                 <h3>Repos séquentiel</h3>
                 <p>Le repos séquentiel chez EROTIK LUX combine relaxation et bien-être dans une approche progressive. Ce massage se déroule sur une période de trois ou quatre heures, incluant des phases de repos complet pour permettre au corps et à l'esprit de se ressourcer pleinement. L'accent est mis sur la détente musculaire, le lâcher-prise et le sommeil réparateur, créant ainsi une expérience de relaxation totale. Ce service est parfait pour ceux qui souhaitent un moment d'évasion prolongé, alliant repos et sensations apaisantes.</p>
-                <button onclick="window.open('https://wa.me/33756869240', '_blank')">Réserver maintenant</button>
+                <button onclick="window.open(href="mass.html", '_blank')">Réserver maintenant</button>
             </div>
         </div>
     </section>
@@ -433,7 +433,7 @@ body {
             <li><strong>3 heures :</strong> 200 € (repos inclus)</li>
             <li><strong>4 heures :</strong> 350 € (avec sommeil inclus)</li>
         </ul>
-        <button onclick="window.open('https://wa.me/33756869240', '_blank')">Réserver maintenant</button>
+        <button onclick="window.open(href="mass.html", '_blank')">Réserver maintenant</button>
         <section class="massages">
             <h2>Nos Types de Massages Érotiques</h2>
             <ul>
@@ -446,7 +446,7 @@ body {
                 <li><strong>Massage Couple :</strong> Partagez un moment de complicité et de détente avec votre partenaire.</li>
                 <li><strong>HARDCORE :</strong> Vous pouvez aussi essayer nos séances purement hardcore contenant des pratiques sexuelle simple tel que la suce la  lèche la  fellation simple ou nature des séances massages plus branlette baise pratique anal ou aval</li>
             </ul>
-            <button onclick="window.open('https://wa.me/33756869240', '_blank')">Réserver maintenant</button>
+            <button onclick="window.open(href="mass.html", '_blank')">Réserver maintenant</button>
         </section>
     </section>
     <button id="back-to-top" style="display: none;">↑</button>
