--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ body {
     <section class="hero">
         <h1>Découvrez l'art du massage érotique</h1>
         <p>EROTIK LUX, c’est bien plus qu’une simple agence, c’est un espace dédié à l’exploration des sens et à la recherche du bien-être. Nous offrons une expérience unique où l’élégance et la sensualité se mêlent pour vous faire vivre des instants d’exception.</p>
-        <button onclick="window.open('href="mass.html"', '_blank')">Faire une réservation</button>
+        <button href="mass.html">Faire une réservation</button>
     </section>
 
     <section class="about" id="about">
