--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             color: #ff0000;
         }
 body {
-     background: linear-gradient(-45deg, #71c5e3, #66a6d1, #83e2ef);
+     background: linear-gradient(-45deg, #0078d4, #66a6d1, #0078d4);
     animation: gradient 5s infinite;
 }
 @keyframes gradient {
@@ -64,7 +64,7 @@ body {
         .hero h1 {
             font-size: 3em;
             margin: 0;
-            color: #0078d4;
+            color: #fdfdfd;
         }
 .hero h1 {
     animation: slideIn 2s ease-out;
@@ -82,7 +82,7 @@ body {
         .hero p {
             margin: 20px 0;
             font-size: 1.2em;
-            color: #0078d4;
+            color: #ffffff;
         }
 
         .hero button {
@@ -123,7 +123,7 @@ body {
 
         .about div {
             max-width: 45%;
-            color: #0078d4;
+            color: #f8f4f4;
         }
 
         .reservation {
@@ -139,8 +139,8 @@ body {
         }
 
         .card {
-            background: #0078d4;
-            color: #fff;
+            background: #f0f8fe;
+            color: #131212;
             border-radius: 10px;
             overflow: hidden;
             text-align: center;
@@ -180,9 +180,9 @@ body {
 
         .pricing {
             padding: 50px 20px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(222, 232, 81, 0.1);
             text-align: center;
-            color: #0078d4;
+            color: #ffffff;
         }
 
         .pricing h2 {
@@ -433,7 +433,7 @@ body {
             <li><strong>3 heures :</strong> 200 € (repos inclus)</li>
             <li><strong>4 heures :</strong> 350 € (avec sommeil inclus)</li>
         </ul>
-        <button onclick="window.open(href="mass.html", '_blank')">Réserver maintenant</button>
+        <button onclick=>Réserver maintenant</button>
         <section class="massages">
             <h2>Nos Types de Massages Érotiques</h2>
             <ul>
