--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@ body {
 
         .pricing {
             padding: 50px 20px;
-            background: rgba(222, 232, 81, 0.1);
+            background: rgba(63, 115, 161, 0.221);
             text-align: center;
             color: #ffffff;
         }
 
         .pricing h2 {
-            color: #9a1803;
+            color: #fafafad8;
         }
 
         .pricing ul {
@@ -248,7 +248,7 @@ body {
         }
         .massages {
             padding: 50px 20px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgb(208, 113, 35);
             text-align: center;
             color: #0078d4;
         }
