--- a/mass.html
+++ b/mass.html
@@ -14,7 +14,7 @@
             color: #ff0000;
         }
 body {
-     background: linear-gradient(-45deg, #71c5e3, #66a6d1, #83e2ef);
+     background: linear-gradient(-45deg, #0078d4, #66a6d1, #0078d4);
     animation: gradient 5s infinite;
 }
 @keyframes gradient {
