--- a/mass.html
+++ b/mass.html
@@ -220,14 +220,18 @@ body {
             card.innerHTML = `
                 <img src="${masseuse.image}" alt="${masseuse.name}" onclick="toggleHighlight(this)">
                 <h3>${masseuse.name}</h3>
-                <button class="btn" onclick="reserve('${masseuse.name}')">Réserver</button>
+               <button class="btn" onclick="window.open('https://wa.me/33615790257', '_blank')">Réserver</button>
+
             `;
             gallery.appendChild(card);
         });
 
         function reserve(name) {
-            alert("Vous avez réservé une séance avec " + name + " !");
-        }
+    const phoneNumber = '33615790257'; // Numéro sans le 0 après +33
+    const message = encodeURIComponent(`Bonjour, je souhaite réserver une séance avec ${name}.`);
+    const whatsappURL = `https://wa.me/${phoneNumber}?text=${message}`;
+    window.open(whatsappURL, '_blank');
+}
 
         function toggleHighlight(img) {
             document.querySelectorAll(".gallery img").forEach(image => image.classList.remove("active"));
