--- a/mass.html
+++ b/mass.html
@@ -180,37 +180,38 @@ body {
     </div>
     
     <script>
-        const masseuses = [
-            { name: "Sophie", image: "16.jpg" },
-            { name: "Elena", image: "10.jpg" },
-            { name: "Charlotte", image: "1.jpg" },
-            { name: "Isabelle", image: "2.jpg" },
-            { name: "Amélie", image: "3.jpg" },
-            { name: "Linda", image: "4.jpg" },
-            { name: "Josette", image: "5.jpg" },
-            { name: "Riley", image: "6.jpg" },
-            { name: "Amanda", image: "7.jpg" },
-            { name: "Aurelie", image: "8.jpg" },
-            { name: "Nina", image: "9.jpg" },
-            { name: "Cassidi", image: "11.jpg" },
-            { name: "Oranne", image: "12.jpg" },
-            { name: "Nafisa", image: "14.jpg" },
-            { name: "Rose", image: "15.jpg" },
-             { name: "Anna", image: "17.jpg" },
-             { name: "Elsa", image: "18.jpg" },
-             { name: "Rita", image: "19.jpg" },
-             { name: "Taylor", image: "20.jpg" },
-             { name: "Marie", image: "21.jpg" },
-             { name: "Suzy", image: "22.jpg" },
-             { name: "Carole", image: "23.jpg" },
-             { name: "Annita", image: "24.jpg" },
-            { name: "Michelle", image: "25.jpg" },
-            { name: "Victoria", image: "26.jpg" },
-            { name: "Melinda", image: "27.jpg" },
-             { name: "Viviane (trans)", image: "28.jpg" },
-             { name: "Thalia", image: "29.jpg" },
-             { name: "Juliette", image: "30.jpg" },
-        ];
+    const masseuses = [
+        { name: "Lune", image: "16.jpg" },
+        { name: "Étoile", image: "10.jpg" },
+        { name: "Perle", image: "1.jpg" },
+        { name: "Saphir", image: "2.jpg" },
+        { name: "Rubis", image: "3.jpg" },
+        { name: "Opale", image: "4.jpg" },
+        { name: "Ambre", image: "5.jpg" },
+        { name: "Cristal", image: "6.jpg" },
+        { name: "Topaze", image: "7.jpg" },
+        { name: "Jade", image: "8.jpg" },
+        { name: "Diamant", image: "9.jpg" },
+        { name: "Onyx", image: "11.jpg" },
+        { name: "Quartz", image: "12.jpg" },
+        { name: "Nacre", image: "14.jpg" },
+        { name: "Argent", image: "15.jpg" },
+        { name: "Orée", image: "17.jpg" },
+        { name: "Brume", image: "18.jpg" },
+        { name: "Aube", image: "19.jpg" },
+        { name: "Flamme", image: "20.jpg" },
+        { name: "Givre", image: "21.jpg" },
+        { name: "Ivoire", image: "22.jpg" },
+        { name: "Pivoine", image: "23.jpg" },
+        { name: "Céleste", image: "24.jpg" },
+        { name: "Sirène", image: "25.jpg" },
+        { name: "Galaxie", image: "26.jpg" },
+        { name: "Azur", image: "27.jpg" },
+        { name: "Miroir", image: "28.jpg" },
+        { name: "Nébuleuse", image: "29.jpg" },
+        { name: "Lueur", image: "30.jpg" },
+        { name: "Aura", image: "31.jpg" }
+    ];
 
         const gallery = document.getElementById("masseuseGallery");
 
@@ -240,3 +241,4 @@ body {
     </script>
 </body>
 </html>
+
